add gettoken to get auth info of user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 
 server.port=8084
+Github.Client_id=7c0c6159bc49849470f8
+Github.Client_secret=83a516f48cc714d0b01f4fdbfaa7f5a8db194883
+Github.Redirect_uri=http://Localhost:8084/callback
