--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-
+#port
 server.port=8084
+#For OauthController
 Github.Client_id=7c0c6159bc49849470f8
 Github.Client_secret=83a516f48cc714d0b01f4fdbfaa7f5a8db194883
 Github.Redirect_uri=http://Localhost:8084/callback
+# datasource config
+spring.datasource.url=jdbc:h2:~/community
+spring.datasource.username=september
+spring.datasource.password=Zz129129
+spring.datasource.driver-class-name=org.h2.Driver
