applied login persistence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,20 @@ spring.datasource.url=jdbc:h2:~/community
 spring.datasource.username=september
 spring.datasource.password=Zz129129
 spring.datasource.driver-class-name=org.h2.Driver
+#Generator config
+Model.targetPackage=com.communitylight.Model
+Model.targetProject=.\\src\\main\\java
+
+Mapper.targetPackage=com.communitylight.Mapper
+Mapper.targetProject=.\\src\\main\\java
+
+MapperXML.targetPackage=com.communitylight.Mapper
+MapperXML.targetProject=.\\src\\main\\java
+#Flyway config
+flyway:
+enabled: true
+baseline-on-migrate: true
+
+
+
+
